<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">


    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/current_temperature"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/textview5" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/min_temperature"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/max_temperature"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/textview4" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/minTemperature" />

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="@+id/weatherImageView"
        app:layout_constraintTop_toTopOf="@+id/currentTemperature" />

    <ProgressBar
        android:id="@+id/weatherProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="204dp"
        android:layout_height="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/weatherImageView"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/textview6" />

</androidx.constraintlayout.widget.ConstraintLayout>